@@ -1,6 +1,8 @@
 2010-06-19 Holger Vogt
  * subckt.c: line indentations
    com_measure2.c: remove bug, see support tracker no. 3013968
+   inpcom.c: no braces around out_variable3 in
+   .MEASURE {DC|AC|TRAN} result FIND out_variable WHEN out_variable2=out_variable3
 
 2010-06-19  Robert Larice
  * ng-spice-rework/src/xspice/Makefile.am:
